crates/python_parser/tests/snapshots/invalid_syntax@expressions__dict__double_star.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/dict/double_star.py
---
## AST

```
Module(
    ModModule {
        range: 0..278,
        body: [
            Expr(
                ExprStmt {
                    range: 125..135,
                    value: Dict(
                        DictExpr {
                            range: 125..135,
                            items: [
                                DictItem {
                                    key: None,
                                    value: Name(
                                        NameExpr {
                                            range: 128..129,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                                DictItem {
                                    key: Some(
                                        NumberLiteral(
                                            NumberLiteralExpr {
                                                range: 133..134,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    ),
                                    value: Name(
                                        NameExpr {
                                            range: 134..134,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 136..162,
                    value: Dict(
                        DictExpr {
                            range: 136..162,
                            items: [
                                DictItem {
                                    key: Some(
                                        Name(
                                            NameExpr {
                                                range: 137..138,
                                                id: Name("a"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    value: NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 140..141,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                },
                                DictItem {
                                    key: None,
                                    value: If(
                                        IfExpr {
                                            range: 145..161,
                                            test: BooleanLiteral(
                                                BooleanLiteralExpr {
                                                    range: 150..154,
                                                    value: true,
                                                },
                                            ),
                                            body: Name(
                                                NameExpr {
                                                    range: 145..146,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            orelse: Name(
                                                NameExpr {
                                                    range: 160..161,
                                                    id: Name("y"),
                                                    ctx: Load,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 163..184,
                    value: Dict(
                        DictExpr {
                            range: 163..184,
                            items: [
                                DictItem {
                                    key: None,
                                    value: Lambda(
                                        LambdaExpr {
                                            range: 166..177,
                                            parameters: Some(
                                                Parameters {
                                                    range: 173..174,
                                                    posonlyargs: [],
                                                    args: [
                                                        ParameterWithDefault {
                                                            range: 173..174,
                                                            parameter: Parameter {
                                                                range: 173..174,
                                                                name: Identifier {
                                                                    id: Name("x"),
                                                                    range: 173..174,
                                                                },
                                                                annotation: None,
                                                            },
                                                            default: None,
                                                        },
                                                    ],
                                                    vararg: None,
                                                    kwonlyargs: [],
                                                    kwarg: None,
                                                },
                                            ),
                                            body: Name(
                                                NameExpr {
                                                    range: 176..177,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                        },
                                    ),
                                },
                                DictItem {
                                    key: Some(
                                        Name(
                                            NameExpr {
                                                range: 179..180,
                                                id: Name("b"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    value: NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 182..183,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 185..201,
                    value: Dict(
                        DictExpr {
                            range: 185..201,
                            items: [
                                DictItem {
                                    key: Some(
                                        Name(
                                            NameExpr {
                                                range: 186..187,
                                                id: Name("a"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    value: NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 189..190,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                },
                                DictItem {
                                    key: None,
                                    value: BoolOp(
                                        BoolOpExpr {
                                            range: 194..200,
                                            op: Or,
                                            values: [
                                                Name(
                                                    NameExpr {
                                                        range: 194..195,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                Name(
                                                    NameExpr {
                                                        range: 199..200,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 202..219,
                    value: Dict(
                        DictExpr {
                            range: 202..219,
                            items: [
                                DictItem {
                                    key: None,
                                    value: BoolOp(
                                        BoolOpExpr {
                                            range: 205..212,
                                            op: And,
                                            values: [
                                                Name(
                                                    NameExpr {
                                                        range: 205..206,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                Name(
                                                    NameExpr {
                                                        range: 211..212,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                },
                                DictItem {
                                    key: Some(
                                        Name(
                                            NameExpr {
                                                range: 214..215,
                                                id: Name("b"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    value: NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 217..218,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 220..241,
                    value: Dict(
                        DictExpr {
                            range: 220..241,
                            items: [
                                DictItem {
                                    key: Some(
                                        Name(
                                            NameExpr {
                                                range: 221..222,
                                                id: Name("a"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    value: NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 224..225,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                },
                                DictItem {
                                    key: None,
                                    value: UnaryOp(
                                        UnaryOpExpr {
                                            range: 229..234,
                                            op: Not,
                                            operand: Name(
                                                NameExpr {
                                                    range: 233..234,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                        },
                                    ),
                                },
                                DictItem {
                                    key: Some(
                                        Name(
                                            NameExpr {
                                                range: 236..237,
                                                id: Name("b"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    value: NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 239..240,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 242..252,
                    value: Dict(
                        DictExpr {
                            range: 242..252,
                            items: [
                                DictItem {
                                    key: None,
                                    value: Compare(
                                        CompareExpr {
                                            range: 245..251,
                                            left: Name(
                                                NameExpr {
                                                    range: 245..246,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            ops: [
                                                In,
                                            ],
                                            comparators: [
                                                Name(
                                                    NameExpr {
                                                        range: 250..251,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 253..267,
                    value: Dict(
                        DictExpr {
                            range: 253..267,
                            items: [
                                DictItem {
                                    key: None,
                                    value: Compare(
                                        CompareExpr {
                                            range: 256..266,
                                            left: Name(
                                                NameExpr {
                                                    range: 256..257,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            ops: [
                                                NotIn,
                                            ],
                                            comparators: [
                                                Name(
                                                    NameExpr {
                                                        range: 265..266,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 268..277,
                    value: Dict(
                        DictExpr {
                            range: 268..277,
                            items: [
                                DictItem {
                                    key: None,
                                    value: Compare(
                                        CompareExpr {
                                            range: 271..276,
                                            left: Name(
                                                NameExpr {
                                                    range: 271..272,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            ops: [
                                                Lt,
                                            ],
                                            comparators: [
                                                Name(
                                                    NameExpr {
                                                        range: 275..276,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
2 | # the ones which are higher than that.
3 | 
4 | {**x := 1}
  |      ^^ Syntax Error: Expected ',', found ':='
5 | {a: 1, **x if True else y}
6 | {**lambda x: x, b: 2}
  |


  |
2 | # the ones which are higher than that.
3 | 
4 | {**x := 1}
  |          ^ Syntax Error: Expected ':', found '}'
5 | {a: 1, **x if True else y}
6 | {**lambda x: x, b: 2}
  |


  |
4 | {**x := 1}
5 | {a: 1, **x if True else y}
  |          ^^^^^^^^^^^^^^^^ Syntax Error: Conditional expression cannot be used here
6 | {**lambda x: x, b: 2}
7 | {a: 1, **x or y}
  |


  |
4 | {**x := 1}
5 | {a: 1, **x if True else y}
6 | {**lambda x: x, b: 2}
  |    ^^^^^^^^^^^ Syntax Error: Lambda expression cannot be used here
7 | {a: 1, **x or y}
8 | {**x and y, b: 2}
  |


  |
5 | {a: 1, **x if True else y}
6 | {**lambda x: x, b: 2}
7 | {a: 1, **x or y}
  |          ^^^^^^ Syntax Error: Boolean expression cannot be used here
8 | {**x and y, b: 2}
9 | {a: 1, **not x, b: 2}
  |


   |
 6 | {**lambda x: x, b: 2}
 7 | {a: 1, **x or y}
 8 | {**x and y, b: 2}
   |    ^^^^^^^ Syntax Error: Boolean expression cannot be used here
 9 | {a: 1, **not x, b: 2}
10 | {**x in y}
   |


   |
 7 | {a: 1, **x or y}
 8 | {**x and y, b: 2}
 9 | {a: 1, **not x, b: 2}
   |          ^^^^^ Syntax Error: Boolean expression cannot be used here
10 | {**x in y}
11 | {**x not in y}
   |


   |
 8 | {**x and y, b: 2}
 9 | {a: 1, **not x, b: 2}
10 | {**x in y}
   |    ^^^^^^ Syntax Error: Comparison expression cannot be used here
11 | {**x not in y}
12 | {**x < y}
   |


   |
 9 | {a: 1, **not x, b: 2}
10 | {**x in y}
11 | {**x not in y}
   |    ^^^^^^^^^^ Syntax Error: Comparison expression cannot be used here
12 | {**x < y}
   |


   |
10 | {**x in y}
11 | {**x not in y}
12 | {**x < y}
   |    ^^^^^ Syntax Error: Comparison expression cannot be used here
   |
